# quantum_circuit

./: .gitignore  CMakeLists.txt  Makefile  README.md  icon.qml  reset.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/rcc/: qmake_QuantumCircuit_UI.qrc  qrc_qmake_QuantumCircuit_UI.cpp  qrc_quantum_circuit_raw_qml_0.cpp  quantum_circuit_raw_qml_0.qrc
.rcc/qmllint/: quantum_circuit.rsp  quantum_circuit_json.rsp  quantum_circuit_module.rsp
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  qrc_resources.cpp
cmake-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cmake-build/quantum_circuit_autogen/: moc_predefs.h  mocs_compilation.cpp
cmake-build/quantum_circuit_autogen/6YEA5652QU/: moc_gategridmodel.cpp  moc_qGUI.cpp
cmake-build/src/: resources.qrc.depends
discarded/: bit_type.h  gate_type.h  type.h
include/: bits.h  circuit_element.h  component.h  gate_a_base.h  gategridmodel.h  library.h  matrix.h  menu.h  menu.txt  multi_bit_components.h  multi_bit_gates.h  qGUI.h  q_circuit.h  quantum_component.h  single_bit_components.h  single_bit_gates.h  toolbox.h
src/: bits.cpp  gate_a_base.cpp  gategridmodel.cpp  library.cpp  main.cpp  matrix.cpp  menu.cpp  multi_bit_components.cpp  multi_bit_gates.cpp  qGUI.cpp  q_circuit.cpp  resources.qrc  single_bit_components.cpp  single_bit_gates.cpp  toolbox.cpp
src/qml/: main.qml
src/qml/components/: BitButton.qml  FloatingIcon.qml  GateIcon.qml  PButton.qml  qmldir
